# Continuador

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RESOLUTION_ADAPTATION_SUMMARY.md  bandit-report.json  main.py  pyproject.toml  requirements.txt  safety-report.json  setup.sh  test_resolution_adaptation.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: MANUAL.md  PROFESSIONAL_ORGANIZATION_REPORT.md  REFACTORING_REPORT.md  SIMPLIFICATION_SUMMARY.md
legacy/: auto_clicker_blue_v2.py
scripts/: quality-check.sh  setup-dev.sh
src/: __init__.py  app.py  config.py  detector.py  monitor.py  resolution_adapter.py  test_helpers.py  ui.py  utils.py
tests/: test_refactoring.py
